Fix overflow.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 
@@ -18,6 +19,11 @@
     font-weight: 300;
     font-style: normal;
 }
+
+body, html {
+    overflow: hidden
+}
+
 
 .content div {
     line-height: 2;
@@ -292,7 +298,7 @@ button:hover, button:focus {
 
 .workshops {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 
     height: 100%;
 }
@@ -304,20 +310,24 @@ button:hover, button:focus {
     top: 0;
 }
 
-.workshops-container-header {
+.workshops-header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: baseline;
 }
 
-.workshops-container-upcoming {
+.workshops-past {
+    color: red
+}
+
+.workshops-upcoming {
     display: flex;
     flex-direction: column;
 }
 
 .workshops h2 {
-    margin-top: 3em;
+    margin-top: 2em;
 }
 
 .arrow-btn {
